--- a/index.html
+++ b/index.html
@@ -5,18 +5,42 @@
         <title>Kelly Mushonga Web Project Summer 2024</title>
         <meta name="viewport" content="width=device-width, initial-scale=1"><!-- This sets up file for mobile use -->
         <meta name="description" content="Kelly Mushonga's projects for TECH 272 Summer 2024">
-            <style>
-                /*This is where the css goes*/
-                {outline:1px solid red;}
-                img {width :100%; max-width: 200px; }
-            </style>
+        <style>
+            /*This is where the css goes*/
+            img {width :100%; max-width: 300px; }
+			
+			/* STRUCTURE */
+			html {
+				box-sizing: border-box;
+				*, *:before, *:after {
+				box-sizing: inherit;
+				}
+				body｛background-color：#706E6E;}
+				main {background-color:orange; 
+				width:600px; padding:40px; 
+				margin:40px auto; border-radius:24px; 
+				border:6px solid #D95B0C;}
+				img {width:100%; max-width: 300px;}
+			
+			/* TYPOGRAPHY */
+				h1 {font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif"; color:white;font-size: 60px; margin: 0;} 
+				h2 {font-style:italic; margin:0;} 
+				ul {padding-left:60px;}
+				li (margin:0 0 10px 0}
+					
+			/* LINKS -- KEEP IN ORDER */ 
+				a:link {color:#052376; font-weight:bold; text-decoration :none; } a:visited {color:darkred;} 
+				a:hover {color:white;} 
+				a:focus {color:white;}
+				a:active {color:yellow;}
+       </style>
     </head>
     <body>
         <main>
             <h1>Kelly Mushonga</h1>
             <h2>Web Projects Summer 2024</h2>
             <ul>
-                    <li><a href="Project_1_mushonga/mushonga_project_1.3_tech272_s2024.html">Project 1</a> </li>
+                    <li><a href="Project_1_mushonga/mushonga_project_1.3_tech272_s2024.html">Biography</a> </li>
                     <li><a href="Project_2_mushonga/gropius 2.1.html">Project 2.1</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.2.html">Project 2.2</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.3.html">Project 2.3</a></li>
