--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				li (margin:0 0 10px 0}
 					
 			/* LINKS -- KEEP IN ORDER */ 
-				a:link {color:#052376; font-weight:bold; text-decoration :none; } a:visited {color:darkred;} 
+				a:link {color:#052376; font-weight:bold; text-decoration :none;} a:visited {color:darkred;} 
 				a:hover {color:white;} 
 				a:focus {color:white;}
 				a:active {color:yellow;}
@@ -41,13 +41,12 @@
             <h2>Web Projects Summer 2024</h2>
             <ul>
                     <li><a href="Project_1_mushonga/mushonga_project_1.3_tech272_s2024.html">Biography</a> </li>
-                    <li><a href="Project_2_mushonga/gropius 2.1.html">Project 2.1</a></li>
-                    <li><a href="Project_2_mushonga/gropius 2.2.html">Project 2.2</a></li>
-                    <li><a href="Project_2_mushonga/gropius 2.3.html">Project 2.3</a></li>
-                    <li><a href="Project_2_mushonga/gropius 2.4.html">Project 2.4</a></li>
-                    <li><a href="Project_2_mushonga/gropius 2.5.html">Project 2.5</a></li>
-                    <li><a href="Project_2_mushonga/gropius 2.6.html">Project 2.6</a></li>
-                    <li><a href="Project_3_mushonga/CFSM.html">Project 3.1</a></li>
+                    <li><a href="Project_2_mushonga/gropius 2.1.html">Project 2.1 Basic</a></li>
+                    <li><a href="Project_2_mushonga/gropius 2.2.html">Project 2.2 Hyperlinks</a></li>
+                    <li><a href="Project_2_mushonga/gropius 2.3.html">Project 2.3 Images</a></li>
+                    <li><a href="Project_2_mushonga/gropius 2.5.html">Project 2.5 Head</a></li>
+                    <li><a href="Project_2_mushonga/gropius 2.6.html">Project 2.6 Structure</a></li>
+                    <li><a href="Project_3_mushonga/CFSM.html">Project 3.1 CFSM</a></li>
             </ul>
         </main>
     </body>
