Added Curly Bracket
Added Curly Bracket to line 29

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				h1 {font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif"; color:white;font-size: 60px; margin: 0;} 
 				h2 {font-style:italic; margin:0;} 
 				ul {padding-left:60px;}
-				li (margin:0 0 10px 0}
+				li {margin:0 0 10px 0}
 					
 			/* LINKS -- KEEP IN ORDER */ 
 				a:link {color:#052376; font-weight:bold; text-decoration :none;} a:visited {color:darkred;} 
@@ -43,7 +43,7 @@
                     <li><a href="Project_1_mushonga/mushonga_project_1.3_tech272_s2024.html">Biography</a> </li>
                     <li><a href="Project_2_mushonga/gropius 2.1.html">Project 2.1 Basic</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.2.html">Project 2.2 Hyperlinks</a></li>
-                    <li><a href="Project_2_mushonga/gropius 2.3.html">Project 2.3 Images</a></li>
+                    <li><a href="Project_2_mushonga/gropius 2.4.html">Project 2.3 Images</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.5.html">Project 2.5 Head</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.6.html">Project 2.6 Structure</a></li>
                     <li><a href="Project_3_mushonga/CFSM.html">Project 3.1 CFSM</a></li>
