--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <li><a href="Project_2_mushonga/gropius 2.5.html">Project 2.5 Head</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.6.html">Project 2.6 Structure</a></li>
                     <li><a href="Project_3_mushonga/CFSM.html">Project 3.1 CFSM</a></li>
+                    <li><a href="Project_3_mushonga/Project_3.3_Tables.html">Project 3.2 Tables & Forms</a></li>
             </ul>
         </main>
     </body>
