Added link rel=

--- a/Project_3_mushonga/CFSM.html
+++ b/Project_3_mushonga/CFSM.html
@@ -5,10 +5,11 @@
         <title>Lenny Kravitz</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Leonard Albert Kravitz (born May 26, 1964) is an American singer-songwriter, multi-instrumentalist and actor.">
+        <link rel="stylesheet" href="css/normalize.css">
         <style>
             {outline:1px solid red;}
             img {max-width: 200px; }
-            
+
              /* BOX SIZING -- ignores border and padding when measuring width */
              html{
                 box-sizing: border-box;
