--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
                     <li><a href="Project_2_mushonga/gropius 2.4.html">Project 2.3 Images</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.5.html">Project 2.5 Head</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.6.html">Project 2.6 Structure</a></li>
-                    <li><a href="Project_2_mushonga/gropius 2.10.html">Project 2.9 Structure</a></li>
-                    <li><a href="Project_3_mushonga/CFSM.html">Project 3.1 CFSM</a></li>
-                    <li><a href="Project_3_mushonga/Project_3.3_Tables.html">Project 3.2 Tables & Forms</a></li>
+                    <li><a href="Project_2_mushonga/gropius 2.10.html">Project 2.9 CSS</a></li>
+                    <li><a href="Project_2_mushonga/gropius 2.11.html">Project 2.11 Floats</a></li>
+                    <li><a href="Project_3_mushonga/CFSM.html">Project 3.1 Pers Wiki</a></li>
+                    <li><a href="Project_3_mushonga/CFSM_2_.html">Project 3.2 Pers Wiki CSS</a></li>
+                    <li><a href="Project_3_mushonga/Project_3.3_Tables.html">Project 3.3 Tables & Forms</a></li>
+                    <li><a href="Project_3_mushonga/floats.html" >Floats Example</a></li>
             </ul>
         </main>
     </body>
