--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <li><a href="Project_2_mushonga/gropius 2.6.html">Project 2.6 Structure</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.10.html">Project 2.9 CSS</a></li>
                     <li><a href="Project_2_mushonga/gropius 2.11.html">Project 2.11 Floats</a></li>
+                    <li><a href="Project_2_mushonga/gropius_2.12.html">Project 2.12 CSS Flex</a></li>
                     <li><a href="Project_3_mushonga/CFSM.html">Project 3.1 Pers Wiki</a></li>
                     <li><a href="Project_3_mushonga/CFSM_2_.html">Project 3.2 Pers Wiki CSS</a></li>
                     <li><a href="Project_3_mushonga/Project_3.3_Tables.html">Project 3.3 Tables & Forms</a></li>
